# tts

./: Dockerfile  LICENSE  NOTES.md  README.md  TODO.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yaml
db/migrations/: 20251208012742_initial-migration.sql
scripts/: docker-entrypoint.sh
src/: cache.py  config.py  configuration.py  database.py  main.py
src/api/: auth.py  limiter.py
src/clients/: polly.py
src/models/: item.py  usage.py  user.py
src/repositories/: __init__.py  base.py  item.py
src/routers/: __init__.py  items.py  legacy.py  speech.py  users.py
src/tts/: kokoro.py  provider.py
src/types/: aws.py  kokoro.py
tests/: conftest.py  test_item_repository.py
tests/routers/: test_legacy.py  test_speech.py  test_users.py
