[project]
name = "tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "aiobotocore-otel>=1.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "logfire[fastapi,sqlalchemy]>=4.16.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.27",
    "types-aiobotocore-polly>=2.25.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.15.1",
]
