[project]
name = "tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.42.9",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "kokoro>=0.9.4",
    "logfire[fastapi,sqlalchemy]>=4.16.0",
    "opentelemetry-instrumentation-botocore>=0.60b1",
    "pip>=25.3",
    "pydantic-settings>=2.0.0",
    "soundfile>=0.13.1",
    "sqlmodel>=0.0.27",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.15.1",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
